# QCustomPlot-PyQt

./: .gitignore  .gitmodules  LICENSE-MIT.txt  README.md  all.sip  axistickerfixed.sip  axistickerlog.sip  axistickerpi.sip  axistickertext.sip  core.sip  datacontainer.sip  helper.h  item-bracket.sip  item-curve.sip  item-ellipse.sip  item-line.sip  item-pixmap.sip  item-rect.sip  item-straightline.sip  item-text.sip  item-tracer.sip  layoutelement-colorscale.sip  plottable-colormap.sip  plottable-errorbar.sip  plottable-financial.sip  plottable-statisticalbox.sip  project.py  pyproject.toml  selectiondecorator-bracket.sip  setup.py
examples/interactions/: main.py  mainwindow.py  mainwindow.ui
examples/plots/: main.py  mainwindow.py  mainwindow.ui
examples/qtquick-qml/: customplot.py  main.py
examples/scrollbar-axis-range-control/: mainwindow.py  mainwindow.ui
examples/text-document-integration/: main.py  mainwindow.py  mainwindow.ui
sip/: all.sip  all_PyQt5.sip  all_PyQt6.sip  axis.sip  axisticker.sip  axistickerdatetime.sip  axistickerfixed.sip  axistickerlog.sip  axistickerpi.sip  axistickertext.sip  axistickertime.sip  colorgradient.sip  core.sip  datacontainer.h  datacontainer.sip  global.sip  item-bracket.sip  item-curve.sip  item-ellipse.sip  item-line.sip  item-pixmap.sip  item-rect.sip  item-straightline.sip  item-text.sip  item-tracer.sip  item.sip  layer.sip  layout.sip  layoutelement-angularaxis.sip  layoutelement-axisrect.sip  layoutelement-colorscale.sip  layoutelement-legend.sip  layoutelement-textelement.sip  lineending.sip  painter.sip  plottable-bars.sip  plottable-colormap.sip  plottable-curve.sip  plottable-errorbar.sip  plottable-financial.sip  (+14 more)
src/: qcp-staticlib.pro
