# Specify the build system.
[build-system]
requires = ['sip >=5.0.0, <7', 'PyQt-builder >=1.6, <2', 'PyQt5']  # change to PyQt6 if necessary
build-backend = 'sipbuild.api'

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = 'QCustomPlot_PyQt5'  # change to PyQt6 if necessary
version = '2.1.1.1'
summary = 'QCustomPlot is a Qt widget for plotting and data visualization'
home-page = 'https://github.com/salsergey/QCustomPlot-PyQt'
author = 'Sergey Salnikov'
author-email = 'salsergey@gmail.com'
license = 'MIT'
description-file = 'README.md'
description-content-type = 'text/markdown'
classifier = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: User Interfaces'
]
requires-dist = 'PyQt5'  # change to PyQt6 if necessary

[tool.sip.project]
sip-files-dir = 'sip'
abi-version = '12'  # change to 13 if using PyQt6
sdist-excludes = [
    '.*',
    '.*/*',
    '.*/*/*',
    '.*/.*',
    '.git/*',
    '.git/*/*',
    '.git/*/*/*',
    '.git/*/*/*/*',
    '.git/*/*/*/*/*',
    '.git/*/*/*/*/*/*',
    '.git/*/*/*/*/*/*/*',
    '*/.*',
    '*/*/.*',
    '*/*/*/.*',
    '*/*/*/*/.*',
    'QCustomPlot/*',
    'QCustomPlot/*/*',
    'QCustomPlot/*/*/*',
    'QCustomPlot/*/*/*/*',
    'QCustomPlot/*/*/*/*/*',
    'build/*',
    'build/*/*',
    'build/*/*/*',
    'dist/*'
]
